--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 :root{
     --primary-color: #3D3A4B;
     --secondary-color: #E3DFFF;
+	user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 body{
     background-color: var(--secondary-color);
@@ -9,7 +14,7 @@ body{
     display: flex;
     justify-content: right;
     position: fixed;
-    right: 0;
+    right: 7px;
 }
 .navbarelem{
     color: var(--primary-color);
@@ -69,6 +74,7 @@ body{
     font-family: "Outfit";
     font-size: 30px;
     font-weight: 900;
+	word-wrap: break-word;
 }
 @media only screen and (max-width: 600px) {
 .navbar{
@@ -101,4 +107,62 @@ body{
     padding: 10px;
     
 }
+}
+/*Cookie PopUp*/
+.cookies{
+    position: fixed;
+    width: 70vw;
+    border: #3D3A4B solid 3px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Outfit";
+    text-align: center;
+    background: linear-gradient(90deg,rgba(65, 102, 46, 0.478),rgba(0, 255, 0, 0.488));
+    color: rgb(0, 255, 0);
+}
+.CookieTitle{
+    font-size: 100px;
+    font-weight: 900;
+}
+.CookieContent{
+    margin-inline: 10%;
+    font-size: 40px;
+}
+.CookieButton{
+    background-color: rgb(0, 200, 0);
+    color: rgb(255, 255, 255);
+    outline: none;
+    border: none;
+    margin-top: 4%;
+    height: 17vh;
+    width: 50%;
+    margin-bottom: 4%;
+    border-radius: 20px;
+    font-size: 600%;
+    text-align: center;
+}
+.CookieButton:hover{
+    background-color: rgb(57, 149, 60);
+    color: rgb(0, 255, 0);
+    border: green solid 3px;
+}
+@media only screen and (max-width: 1300px){
+    .CookieTitle{
+        font-size: 50px;
+        
+    }
+    .CookieContent{
+        
+        font-size: 20px;
+    }
+    .CookieButton{ 
+        font-size: 100%;
+    }
+
 }
